[package]
name = "evm-fuzzer"
version = "0.1.0"
authors = ["echno"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }
num_cpus = "1.0"

[dependencies]
libafl = { path="../third-party/LibAFL/libafl" } # git = "https://github.com/AFLplusplus/LibAFL.git", rev = "408431ba5c1c6e3571c1183e99dfdca4de089bdc" }
libafl_targets = { path="../third-party/LibAFL/libafl_targets" , features = ["sancov_pcguard_hitcounts", "sancov_cmplog", "libfuzzer"]} # git = "https://github.com/AFLplusplus/LibAFL.git", rev = "408431ba5c1c6e3571c1183e99dfdca4de089bdc", features = ["sancov_pcguard_hitcounts", "sancov_cmplog", "libfuzzer"] }
# TODO Include it only when building cc
libafl_cc = { path="../third-party/LibAFL/libafl_cc" } # git = "https://github.com/AFLplusplus/LibAFL.git", rev = "408431ba5c1c6e3571c1183e99dfdca4de089bdc" }
mimalloc = { version = "*", default-features = false }
structopt = "0.3.25"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
ahash = { version = "0.7", default-features=false, features=["compile-time-rng"] } # The hash function already used in hashbrown
# openethereum-harness = { path="../openethereum" }
clap = { version = "3.2", features = ["derive"] }

[lib]
name = "stdfuzzer"
crate-type = ["staticlib"]

